add no-close func to calc-form and number type input value in modals

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
             <form class="form main_form" action="#">
               <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
               <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-              <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+              <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
               <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
               <p class="form_notice">Ваши данные конфиденциальны</p>
             </form>
@@ -415,7 +415,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -473,7 +473,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -525,7 +525,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit" >Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -584,7 +584,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -727,7 +727,7 @@
             <form class="form main_form" action="#">
               <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
               <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-              <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+              <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
               <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
               <p class="form_notice">Ваши данные конфиденциальны</p>
             </form>
@@ -800,7 +800,7 @@
 
     <!-- Modals -->
     <!-- Request a call -->
-    <div class="popup">
+    <div class="popup" data-modal>
         <div class="popup_dialog">
             <div class="popup_content text-center">
                 <button type="button" class="popup_close"><strong>&times;</strong></button>
@@ -808,7 +808,7 @@
                     <form class="form" action="#">
                       <h2>Введите ваши данные <br>и нажмите заказать звонок</h2>
                         <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                        <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                        <input class="form-control form_input phone_input"  name="user_phone" required type="text" placeholder="Введите телефон">
                         <button class="text-uppercase btn-block button" name="submit" type="submit">Заказать звонок</button>
                         <p class="form_notice">Перезвоним в течение 10 минут</p>
                     </form>
@@ -818,7 +818,7 @@
     </div>
 
     <!-- Request an engineer -->
-    <div class="popup_engineer">
+    <div class="popup_engineer" data-modal>
         <div class="popup_dialog">
             <div class="popup_content text-center">
                 <button type="button" class="popup_close"><strong>&times;</strong></button>
@@ -826,7 +826,7 @@
                     <form class="form" action="#">
                       <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                       <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                      <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                      <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
                       <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                       <p class="form_notice">Ваши данные конфиденциальны</p>
                     </form>
@@ -836,7 +836,7 @@
     </div>
 
     <!-- Calculator -->
-   <div class="popup_calc">
+   <div class="popup_calc" data-modal>
         <div class="popup_dialog">
             <div class="popup_calc_content text-center">
                 <button type="button" class="popup_calc_close"><strong>&times;</strong></button>
@@ -868,7 +868,7 @@
         </div>
     </div> 
 
-   <div class="popup_calc_profile">
+   <div class="popup_calc_profile" data-modal>
         <div class="popup_dialog">
             <div class="popup_calc_profile_content text-center">
                 <button type="button" class="popup_calc_profile_close"><strong>&times;</strong></button>
@@ -899,7 +899,7 @@
         </div>
     </div> 
 
-    <div class="popup_calc_end">
+    <div class="popup_calc_end" data-modal>
         <div class="popup_dialog">
             <div class="popup_content text-center">
                 <button type="button" class="popup_calc_end_close"><strong>&times;</strong></button>
@@ -907,7 +907,7 @@
                     <form class="form" action="#">
                       <h2>Спасибо за обращение! <br>Оставьте свои данные</h2>
                         <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                        <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                        <input class="form-control form_input phone_input" name="user_phone" required type="text" placeholder="Введите телефон">
                         <button class="text-uppercase btn-block button" name="submit" type="submit">Рассчитать стоимость</button>
                         <p class="form_notice">Перезвоним в течение 10 минут</p>
                     </form>
